--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
-title: 16th Annual Biocuration Conference
-name: International Society of Biocuration
+title: 16th Annual International Biocuration Conference
 
 theme: minima
-github_username: biocuration
-twitter_username: biocurator
+github_username: biocuration2023
+twitter_username: biocuration2023
 
 plugins:
   - jekyll-feed
