Add more contact info

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: 16th Annual International Biocuration Conference
+email: biocuration2023@gmail.com
 
 theme: minima
 github_username: biocuration2023
