--- a/_data/workshops.yml
+++ b/_data/workshops.yml
@@ -110,6 +110,9 @@ Output: We propose to author a whitepaper built from the biocurator comments and
     - name: Nicole Vasilevsky
       affiliation: Critical Path Institute
       orcid: 0000-0001-5208-3432
+    - name: Randi Vita
+      affiliation: La Jolla Institute for Allergy and Immunology
+      orcid: 0000-0001-8957-7612
 
   abstract: "The [International Society for Biocuration (ISB)](https://www.biocuration.org/) was formed to promote the field of biocuration and to provide a professional society to support curators and aid in career growth and development. The path to a career in biocuration is varied, and we play various roles in our professional positions. This workshop aims to address some of the following questions through structured brainstorming sessions:\n
 
