--- a/_data/workshops.yml
+++ b/_data/workshops.yml
@@ -97,7 +97,7 @@ Output: We propose to author a whitepaper built from the biocurator comments and
   
   This will be followed by a jamboree/hackathon where we will discuss selected publications to identify commonalities and gaps in our current curation practices, and provide potential solutions. The attendees will help identify areas where curators, data wranglers, and text mining experts can collaborate to address gaps in glycan and glycosylation annotations, leverage each other’s work to improve their respective resources and encourage data sharing amongst resources.\n
   
-  There is a free pre-workshop Sunday April 23 from 9-5pm. Lunch and coffee will be provided. For more information and registration link, please visit [](https://wiki.glygen.org/BioCuration_Workshop_2023) \n
+  There is a free pre-workshop Sunday, April 23<sup>rd</sup> from 9-5pm CEST. Lunch and coffee will be provided. For more information and registration link, please visit [here](https://wiki.glygen.org/BioCuration_Workshop_2023).\n
   
   Organizers: Raja Mazumder (GlySpace, GlyGen), Mike Tiemeyer (GlySpace, GlyGen), Rene Ranzinger (GlyGen), Maria Martin (UniProt, GlyGen), Kiyoko Aoki-Kinoshita (GlySpace, GlyCosmos, GlyTouCan), Frederique Lisacek (GlySpace, GlyConnect), Cecilia Arighi (PIR, BioCreative, UniProt), Randi Vita (IEDB)"
 
