Add a link to our pre-conference survey

--- a/_data/workshops.yml
+++ b/_data/workshops.yml
@@ -123,4 +123,6 @@ Output: We propose to author a whitepaper built from the biocurator comments and
 3. What skill sets can someone learn to enhance their career growth?\n
 
 As an outcome of this workshop, we will disseminate the key discussion points and takeaways via the ISB website to further the growth of curators in our community.
+
+Please fill out a pre-conference [survey here](https://docs.google.com/forms/d/e/1FAIpQLSd3tJM-I61v8n_mQJKUzFwdSMsVszdo5ZiwgLzVkAVeK-1E1w/viewform). The survey will be open until March 20th. 
 "
