--- a/_data/program_committee.yml
+++ b/_data/program_committee.yml
@@ -113,7 +113,7 @@
   personLabel: Sabrina Toro
   topics: biocuration, animal model, ontology
   twitter: curioussabrinat
-- employerLabel_: AstraZeneca
+- employerLabel_: Independent Data Curation Advisor
   genderLabel: female
   github: VarshaKhodiyar
   gscholar: Vrg7RlAAAAAJ
