--- a/_data/keynotes.yml
+++ b/_data/keynotes.yml
@@ -8,14 +8,23 @@
   twitter: MarcoRoos
   img: img/roos.jpg
 
-- name: Nathalie Conte
-  affiliation: AstraZeneca
-  country: UK
-  orcid: 0000-0002-1010-3121
-  wikidata: Q48975648
-  description: Nathalie Conte is the Data infrastructure Lead (Omics Data) at AstraZeneca. She previously spent years in various bioinformatics-related roles at the European Bioinformatics Institute (EMBL-EBI).
-  theme: Impact of Biocuration
-  img: img/conte.jpg
+#- name: Nathalie Conte
+#  affiliation: AstraZeneca
+#  country: UK
+#  orcid: 0000-0002-1010-3121
+#  wikidata: Q48975648
+#  description: Nathalie Conte is the Data infrastructure Lead (Omics Data) at AstraZeneca. She previously spent years in various bioinformatics-related roles at the European Bioinformatics Institute (EMBL-EBI).
+#  theme: Impact of Biocuration
+#  img: img/conte.jpg
+
+- name: Paula Leitman
+  affiliation: Reflora Project
+  country: Brazil
+  orcid: 0000-0002-2997-3784
+  wikidata: Q26712006
+  description: Paula Leitman has been working for over 10 years in the Reflora project, coordinated by the Rio de Janeiro Botanical Garden, participating in the development and management of the two largest data platforms on Brazilian flora, the Reflora Virtual Herbarium and Flora & Funga of Brazil.
+  theme: Biocuration and Biodiversity
+  img: img/leitman.jpg
 
 - name: Guy Cochrane
   position: Executive Director
