--- a/_data/keynotes.yml
+++ b/_data/keynotes.yml
@@ -18,7 +18,7 @@
 #  img: img/conte.jpg
 
 - name: Paula Leitman
-  affiliation: Reflora Project
+  affiliation: Rio de Janeiro Botanical Garden
   country: Brazil
   orcid: 0000-0002-2997-3784
   wikidata: Q26712006
