--- a/_data/program_committee.yml
+++ b/_data/program_committee.yml
@@ -102,7 +102,7 @@
   personLabel: Peter Uetz
   topics: Protein function prediction, protein-protein interaction, biodiversity
   twitter: peteruetz
-- employerLabel_: University of Colorado Anschutz Medical Campus
+- employerLabel_: University of Colorado
   genderLabel: female
   github: sabrinatoro
   gscholar: 0EmO2vwAAAAJ
