Add wifi and moni

--- a/_data/poster.yml
+++ b/_data/poster.yml
@@ -2868,6 +2868,8 @@
     series_ordinal: 8
   - label: Roxanne Yamashita
     series_ordinal: 9
+  - label: Monica Munoz-Torres
+    series_ordinal: 10
   keywords:
   - Equity
   - Diversity
